# odm-pymongo-redis

./: .gitignore  README.md  models.yml  pyproject.toml
src/datos/: centroeducativo.json  data_insert.json  empresa.json  persona.json
src/odm/: centroeducativo.json  controlacceso.py  data_insert.json  empresa.json  persona.json  practica1.py  practica2.py  practica3.py
src/odm/practica4/: consultas.sh
src/odm/practica4/funciones1/: map.py  reduce.py
src/odm/practica4/funciones2/: map.py  reduce.py
src/odm/practica4/funciones3/: map.py  reduce.py
src/odm/practica4/funciones4/: map.py  reduce.py
src/odm/practica4/funciones5/: map.py  reduce.py
src/odm/practica4/funciones6/: map.py  reduce.py
src/odm/practica4/funciones7/: map.py  reduce.py
src/odm/practica4/funciones8/: map.py  reduce.py
src/odm/practica4/funciones9/: map.py  reduce.py
