[tool.poetry]
name = "odm-pymongo-redis"
version = "0.1.0"
description = "Aplicacion ODM de mongodb, redis y neo4j"
authors = ["adriantoral <adrian.rubiboy11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dnspython = "2.4.2"
geographiclib = "2.0"
geojson = "3.0.1"
geopy = "2.4.0"
pymongo = "4.5.0"
pyyaml = "6.0.1"
redis = "5.0.1"
neo4j = "^5.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
